Made crystal texture location less fragile